Remove Shadow DOM styles
The Shadow DOM got removed from text editors since Atom v1.13.

--- a/styles/functions.less
+++ b/styles/functions.less
@@ -11,13 +11,11 @@
 }
 
 .editor-font (@fonts) {
-  atom-text-editor,
-  atom-text-editor::shadow {
+  atom-text-editor {
     font-family: @fonts;
   }
   .settings-view {
-    atom-text-editor.mini,
-    atom-text-editor.mini::shadow {
+    atom-text-editor.mini {
       font-family: @fonts !important;
     }
   }
