--- a/styles/functions.less
+++ b/styles/functions.less
@@ -11,11 +11,11 @@
 }
 
 .editor-font (@fonts) {
-  atom-text-editor {
+  atom-text-editor.editor {
     font-family: @fonts;
   }
   .settings-view {
-    atom-text-editor.mini {
+    atom-text-editor.editor.mini {
       font-family: @fonts !important;
     }
   }
