--- a/styles/functions.less
+++ b/styles/functions.less
@@ -10,15 +10,21 @@
   }
 }
 
-atom-text-editor.editor {
-  font-family: var(--fonts-cjk-editorFont);
+[data-fonts-cjk-editorFont] {
+  atom-text-editor.editor {
+    font-family: var(--fonts-cjk-editorFont);
+  }
 }
 
-.markdown-preview {
-  font-family: var(--fonts-cjk-markdownPreviewFont) !important;
+[data-fonts-cjk-markdownPreviewFont] {
+  .markdown-preview {
+    font-family: var(--fonts-cjk-markdownPreviewFont) !important;
+  }
 }
 
-atom-workspace,
-.settings-view {
-  font-family: var(--fonts-cjk-workspaceFont) !important;
+[data-fonts-cjk-workspaceFont] {
+  atom-workspace,
+  .settings-view {
+    font-family: var(--fonts-cjk-workspaceFont) !important;
+  }
 }
