Apply fonts to GitHub Panel
GitHub integration was added since Atom v1.18.

--- a/styles/functions.less
+++ b/styles/functions.less
@@ -29,7 +29,8 @@
 
 .workspace-font (@fonts) {
   atom-workspace,
-  .settings-view {
+  .settings-view,
+  .github-Panel {
     font-family: @fonts !important;
   }
 }
