Apply fonts to GitHub Panel (#11)
* Apply fonts to GitHub Panel

GitHub integration was added since Atom v1.18.

* Install required packages before CI runs

* Revert "Install required packages before CI runs"

This reverts commit caa15e5df05a631314fb121a0197426dd7e2f129.

* Fix CI build error

* Remove spec for GitHub Panel temporarily

--- a/styles/functions.less
+++ b/styles/functions.less
@@ -24,7 +24,8 @@
 
 [data-fonts-cjk-workspaceFont] {
   atom-workspace,
-  .settings-view {
+  .settings-view,
+  .github-Panel {
     font-family: var(--fonts-cjk-workspaceFont) !important;
   }
 }
