Add system default font as fallback
Close #3.

--- a/styles/functions.less
+++ b/styles/functions.less
@@ -12,13 +12,13 @@
 
 [data-fonts-cjk-editorFont] {
   atom-text-editor.editor {
-    font-family: var(--fonts-cjk-editorFont);
+    font-family: var(--fonts-cjk-editorFont), monospace;
   }
 }
 
 [data-fonts-cjk-markdownPreviewFont] {
   .markdown-preview {
-    font-family: var(--fonts-cjk-markdownPreviewFont) !important;
+    font-family: var(--fonts-cjk-markdownPreviewFont), sans-serif !important;
   }
 }
 
@@ -26,6 +26,6 @@
   atom-workspace,
   .settings-view,
   .github-Panel {
-    font-family: var(--fonts-cjk-workspaceFont) !important;
+    font-family: var(--fonts-cjk-workspaceFont), sans-serif !important;
   }
 }
