Shorten font face loader function name

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,34 +1,34 @@
 @import 'functions';
 
-.font-face('MigMix 1P', 400, normal, 'migmix-1p/migmix-1p-regular.ttf');
-.font-face('MigMix 1P', 700, normal, 'migmix-1p/migmix-1p-bold.ttf');
-.font-face('MigMix 2P', 400, normal, 'migmix-2p/migmix-2p-regular.ttf');
-.font-face('MigMix 2P', 700, normal, 'migmix-2p/migmix-2p-bold.ttf');
-.font-face('MigMix 1M', 400, normal, 'migmix-1m/migmix-1m-regular.ttf');
-.font-face('MigMix 1M', 700, normal, 'migmix-1m/migmix-1m-bold.ttf');
-.font-face('MigMix 2M', 400, normal, 'migmix-2m/migmix-2m-regular.ttf');
-.font-face('MigMix 2M', 700, normal, 'migmix-2m/migmix-2m-bold.ttf');
-.font-face('Migu 1P', 400, normal, 'migu-1p/migu-1p-regular.ttf');
-.font-face('Migu 1P', 700, normal, 'migu-1p/migu-1p-bold.ttf');
-.font-face('Migu 1C', 400, normal, 'migu-1c/migu-1c-regular.ttf');
-.font-face('Migu 1C', 700, normal, 'migu-1c/migu-1c-bold.ttf');
-.font-face('Migu 1M', 400, normal, 'migu-1m/migu-1m-regular.ttf');
-.font-face('Migu 1M', 700, normal, 'migu-1m/migu-1m-bold.ttf');
-.font-face('Migu 2M', 400, normal, 'migu-2m/migu-2m-regular.ttf');
-.font-face('Migu 2M', 700, normal, 'migu-2m/migu-2m-bold.ttf');
-.font-face('Ricty Diminished', 400, normal, 'ricty-diminished/RictyDiminished-Regular.ttf');
-.font-face('Ricty Diminished', 700, normal, 'ricty-diminished/RictyDiminished-Bold.ttf');
-.font-face('Ricty Diminished', 400, italic, 'ricty-diminished/RictyDiminished-Oblique.ttf');
-.font-face('Ricty Diminished', 700, italic, 'ricty-diminished/RictyDiminished-BoldOblique.ttf');
-.font-face('Source Han Code JP', 400, normal, 'source-han-code-jp/SourceHanCodeJP-Regular.otf');
-.font-face('Source Han Code JP', 700, normal, 'source-han-code-jp/SourceHanCodeJP-Bold.otf');
-.font-face('Source Han Code JP', 400, italic, 'source-han-code-jp/SourceHanCodeJP-RegularIt.otf');
-.font-face('Source Han Code JP', 700, italic, 'source-han-code-jp/SourceHanCodeJP-BoldIt.otf');
-.font-face('Source Han Sans JP', 400, normal, 'source-han-sans/SourceHanSansJP-Regular.otf');
-.font-face('Source Han Sans JP', 700, normal, 'source-han-sans/SourceHanSansJP-Bold.otf');
-.font-face('Source Han Sans KR', 400, normal, 'source-han-sans/SourceHanSansKR-Regular.otf');
-.font-face('Source Han Sans KR', 700, normal, 'source-han-sans/SourceHanSansKR-Bold.otf');
-.font-face('Source Han Sans TW', 400, normal, 'source-han-sans/SourceHanSansTW-Regular.otf');
-.font-face('Source Han Sans TW', 700, normal, 'source-han-sans/SourceHanSansTW-Bold.otf');
-.font-face('Source Han Sans CN', 400, normal, 'source-han-sans/SourceHanSansCN-Regular.otf');
-.font-face('Source Han Sans CN', 700, normal, 'source-han-sans/SourceHanSansCN-Bold.otf');
+.font('MigMix 1P', 400, normal, 'migmix-1p/migmix-1p-regular.ttf');
+.font('MigMix 1P', 700, normal, 'migmix-1p/migmix-1p-bold.ttf');
+.font('MigMix 2P', 400, normal, 'migmix-2p/migmix-2p-regular.ttf');
+.font('MigMix 2P', 700, normal, 'migmix-2p/migmix-2p-bold.ttf');
+.font('MigMix 1M', 400, normal, 'migmix-1m/migmix-1m-regular.ttf');
+.font('MigMix 1M', 700, normal, 'migmix-1m/migmix-1m-bold.ttf');
+.font('MigMix 2M', 400, normal, 'migmix-2m/migmix-2m-regular.ttf');
+.font('MigMix 2M', 700, normal, 'migmix-2m/migmix-2m-bold.ttf');
+.font('Migu 1P', 400, normal, 'migu-1p/migu-1p-regular.ttf');
+.font('Migu 1P', 700, normal, 'migu-1p/migu-1p-bold.ttf');
+.font('Migu 1C', 400, normal, 'migu-1c/migu-1c-regular.ttf');
+.font('Migu 1C', 700, normal, 'migu-1c/migu-1c-bold.ttf');
+.font('Migu 1M', 400, normal, 'migu-1m/migu-1m-regular.ttf');
+.font('Migu 1M', 700, normal, 'migu-1m/migu-1m-bold.ttf');
+.font('Migu 2M', 400, normal, 'migu-2m/migu-2m-regular.ttf');
+.font('Migu 2M', 700, normal, 'migu-2m/migu-2m-bold.ttf');
+.font('Ricty Diminished', 400, normal, 'ricty-diminished/RictyDiminished-Regular.ttf');
+.font('Ricty Diminished', 700, normal, 'ricty-diminished/RictyDiminished-Bold.ttf');
+.font('Ricty Diminished', 400, italic, 'ricty-diminished/RictyDiminished-Oblique.ttf');
+.font('Ricty Diminished', 700, italic, 'ricty-diminished/RictyDiminished-BoldOblique.ttf');
+.font('Source Han Code JP', 400, normal, 'source-han-code-jp/SourceHanCodeJP-Regular.otf');
+.font('Source Han Code JP', 700, normal, 'source-han-code-jp/SourceHanCodeJP-Bold.otf');
+.font('Source Han Code JP', 400, italic, 'source-han-code-jp/SourceHanCodeJP-RegularIt.otf');
+.font('Source Han Code JP', 700, italic, 'source-han-code-jp/SourceHanCodeJP-BoldIt.otf');
+.font('Source Han Sans JP', 400, normal, 'source-han-sans/SourceHanSansJP-Regular.otf');
+.font('Source Han Sans JP', 700, normal, 'source-han-sans/SourceHanSansJP-Bold.otf');
+.font('Source Han Sans KR', 400, normal, 'source-han-sans/SourceHanSansKR-Regular.otf');
+.font('Source Han Sans KR', 700, normal, 'source-han-sans/SourceHanSansKR-Bold.otf');
+.font('Source Han Sans TW', 400, normal, 'source-han-sans/SourceHanSansTW-Regular.otf');
+.font('Source Han Sans TW', 700, normal, 'source-han-sans/SourceHanSansTW-Bold.otf');
+.font('Source Han Sans CN', 400, normal, 'source-han-sans/SourceHanSansCN-Regular.otf');
+.font('Source Han Sans CN', 700, normal, 'source-han-sans/SourceHanSansCN-Bold.otf');
