Use class names instead of data attribute to apply styles

--- a/styles/main.less
+++ b/styles/main.less
@@ -33,19 +33,19 @@
 .font('Source Han Sans CN', 400, normal, 'source-han-sans/SourceHanSansCN-Regular.otf');
 .font('Source Han Sans CN', 700, normal, 'source-han-sans/SourceHanSansCN-Bold.otf');
 
-[data-fonts-cjk-editorFont] {
+.fonts-cjk-editorFont {
   atom-text-editor.editor {
     font-family: var(--fonts-cjk-editorFont);
   }
 }
 
-[data-fonts-cjk-markdownPreviewFont] {
+.fonts-cjk-markdownPreviewFont {
   .markdown-preview {
     font-family: var(--fonts-cjk-markdownPreviewFont) !important;
   }
 }
 
-[data-fonts-cjk-workspaceFont] {
+.fonts-cjk-workspaceFont {
   atom-workspace,
   .settings-view,
   .github-Panel {
