Use kebab case in CSS variable name

--- a/styles/main.less
+++ b/styles/main.less
@@ -33,22 +33,22 @@
 .font('Source Han Sans CN', 400, normal, 'source-han-sans/SourceHanSansCN-Regular.otf');
 .font('Source Han Sans CN', 700, normal, 'source-han-sans/SourceHanSansCN-Bold.otf');
 
-.fonts-cjk-editorFont {
+.fonts-cjk-editor-font {
   atom-text-editor.editor {
-    font-family: var(--fonts-cjk-editorFont);
+    font-family: var(--fonts-cjk-editor-font);
   }
 }
 
-.fonts-cjk-markdownPreviewFont {
+.fonts-cjk-markdown-preview-font {
   .markdown-preview {
-    font-family: var(--fonts-cjk-markdownPreviewFont) !important;
+    font-family: var(--fonts-cjk-markdown-preview-font) !important;
   }
 }
 
-.fonts-cjk-workspaceFont {
+.fonts-cjk-workspace-font {
   atom-workspace,
   .settings-view,
   .github-Panel {
-    font-family: var(--fonts-cjk-workspaceFont) !important;
+    font-family: var(--fonts-cjk-workspace-font) !important;
   }
 }
