Subset fonts and convert to WOFF2 format

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,13 +1,13 @@
 @import 'functions';
 
-.font('M+ 1m', 400, normal, 'mplus-1m/mplus-1m-regular.ttf');
-.font('M+ 1m', 700, normal, 'mplus-1m/mplus-1m-bold.ttf');
-.font('M+ 1p', 400, normal, 'mplus-1p/mplus-1p-regular.ttf');
-.font('M+ 1p', 700, normal, 'mplus-1p/mplus-1p-bold.ttf');
-.font('M+ 2m', 400, normal, 'mplus-2m/mplus-2m-regular.ttf');
-.font('M+ 2m', 700, normal, 'mplus-2m/mplus-2m-bold.ttf');
-.font('M+ 2p', 400, normal, 'mplus-2p/mplus-2p-regular.ttf');
-.font('M+ 2p', 700, normal, 'mplus-2p/mplus-2p-bold.ttf');
+.font('M+ 1m', 400, normal, 'mplus-1m/mplus-1m-regular.woff2');
+.font('M+ 1m', 700, normal, 'mplus-1m/mplus-1m-bold.woff2');
+.font('M+ 1p', 400, normal, 'mplus-1p/mplus-1p-regular.woff2');
+.font('M+ 1p', 700, normal, 'mplus-1p/mplus-1p-bold.woff2');
+.font('M+ 2m', 400, normal, 'mplus-2m/mplus-2m-regular.woff2');
+.font('M+ 2m', 700, normal, 'mplus-2m/mplus-2m-bold.woff2');
+.font('M+ 2p', 400, normal, 'mplus-2p/mplus-2p-regular.woff2');
+.font('M+ 2p', 700, normal, 'mplus-2p/mplus-2p-bold.woff2');
 .font('Noto Sans JP', 400, normal, 'noto-sans-jp/NotoSansJP-Regular.woff2');
 .font('Noto Sans JP', 700, normal, 'noto-sans-jp/NotoSansJP-Bold.woff2');
 .font('Noto Sans KR', 400, normal, 'noto-sans-kr/NotoSansKR-Regular.woff2');
@@ -16,10 +16,10 @@
 .font('Noto Sans SC', 700, normal, 'noto-sans-sc/NotoSansSC-Bold.woff2');
 .font('Noto Sans TC', 400, normal, 'noto-sans-tc/NotoSansTC-Regular.woff2');
 .font('Noto Sans TC', 700, normal, 'noto-sans-tc/NotoSansTC-Bold.woff2');
-.font('Ricty Diminished', 400, normal, 'ricty-diminished/RictyDiminished-Regular.ttf');
-.font('Ricty Diminished', 700, normal, 'ricty-diminished/RictyDiminished-Bold.ttf');
-.font('Ricty Diminished', 400, italic, 'ricty-diminished/RictyDiminished-Oblique.ttf');
-.font('Ricty Diminished', 700, italic, 'ricty-diminished/RictyDiminished-BoldOblique.ttf');
+.font('Ricty Diminished', 400, normal, 'ricty-diminished/RictyDiminished-Regular.woff2');
+.font('Ricty Diminished', 700, normal, 'ricty-diminished/RictyDiminished-Bold.woff2');
+.font('Ricty Diminished', 400, italic, 'ricty-diminished/RictyDiminished-Oblique.woff2');
+.font('Ricty Diminished', 700, italic, 'ricty-diminished/RictyDiminished-BoldOblique.woff2');
 
 .fonts-cjk-editor-font {
   atom-text-editor.editor {
