Avoid long lines

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,12 +1,16 @@
 .fonts-cjk-editor-font {
   atom-text-editor.editor {
-    font-family: var(--fonts-cjk-editor-font), var(--fonts-cjk-secondary-font, monospace);
+    font-family:
+      var(--fonts-cjk-editor-font),
+      var(--fonts-cjk-secondary-font, monospace);
   }
 }
 
 .fonts-cjk-markdown-preview-font {
   .markdown-preview {
-    font-family: var(--fonts-cjk-markdown-preview-font), var(--fonts-cjk-secondary-font, sans-serif) !important;
+    font-family:
+      var(--fonts-cjk-markdown-preview-font),
+      var(--fonts-cjk-secondary-font, sans-serif) !important;
   }
 }
 
@@ -14,6 +18,8 @@
   atom-workspace,
   .settings-view,
   .github-Panel {
-    font-family: var(--fonts-cjk-workspace-font), var(--fonts-cjk-secondary-font, sans-serif) !important;
+    font-family:
+      var(--fonts-cjk-workspace-font),
+      var(--fonts-cjk-secondary-font, sans-serif) !important;
   }
 }
