Update GitHub panel class name

--- a/styles/main.less
+++ b/styles/main.less
@@ -17,7 +17,7 @@
 .fonts-cjk-workspace-font {
   atom-workspace,
   .settings-view,
-  .github-Panel {
+  .github-Git {
     font-family:
       var(--fonts-cjk-workspace-font),
       var(--fonts-cjk-secondary-font, sans-serif) !important;
