Add Noto Sans HK

--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -8,6 +8,8 @@
 .font('M+ 2m', 700, normal, 'mplus-2m/mplus-2m-bold.woff2');
 .font('M+ 2p', 400, normal, 'mplus-2p/mplus-2p-regular.woff2');
 .font('M+ 2p', 700, normal, 'mplus-2p/mplus-2p-bold.woff2');
+.font('Noto Sans HK', 400, normal, 'noto-sans-hk/NotoSansHK-Regular.woff2');
+.font('Noto Sans HK', 700, normal, 'noto-sans-hk/NotoSansHK-Bold.woff2');
 .font('Noto Sans JP', 400, normal, 'noto-sans-jp/NotoSansJP-Regular.woff2');
 .font('Noto Sans JP', 700, normal, 'noto-sans-jp/NotoSansJP-Bold.woff2');
 .font('Noto Sans KR', 400, normal, 'noto-sans-kr/NotoSansKR-Regular.woff2');
