--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -22,15 +22,15 @@
 .font('Ricty Diminished', 700, normal, 'ricty-diminished/RictyDiminished-Bold.woff2');
 .font('Ricty Diminished', 400, italic, 'ricty-diminished/RictyDiminished-Oblique.woff2');
 .font('Ricty Diminished', 700, italic, 'ricty-diminished/RictyDiminished-BoldOblique.woff2');
-.font('Sarasa Mono J', 400, normal, 'sarasa-gothic/sarasa-mono-j-regular.woff');
-.font('Sarasa Mono J', 700, normal, 'sarasa-gothic/sarasa-mono-j-bold.woff');
-.font('Sarasa Mono J', 400, italic, 'sarasa-gothic/sarasa-mono-j-italic.woff');
-.font('Sarasa Mono J', 700, italic, 'sarasa-gothic/sarasa-mono-j-bolditalic.woff');
-.font('Sarasa Mono SC', 400, normal, 'sarasa-gothic/sarasa-mono-sc-regular.woff');
-.font('Sarasa Mono SC', 700, normal, 'sarasa-gothic/sarasa-mono-sc-bold.woff');
-.font('Sarasa Mono SC', 400, italic, 'sarasa-gothic/sarasa-mono-sc-italic.woff');
-.font('Sarasa Mono SC', 700, italic, 'sarasa-gothic/sarasa-mono-sc-bolditalic.woff');
-.font('Sarasa Mono TC', 400, normal, 'sarasa-gothic/sarasa-mono-tc-regular.woff');
-.font('Sarasa Mono TC', 700, normal, 'sarasa-gothic/sarasa-mono-tc-bold.woff');
-.font('Sarasa Mono TC', 400, italic, 'sarasa-gothic/sarasa-mono-tc-italic.woff');
-.font('Sarasa Mono TC', 700, italic, 'sarasa-gothic/sarasa-mono-tc-bolditalic.woff');
+.font('Sarasa Mono J', 400, normal, 'sarasa-gothic/sarasa-mono-j-regular.woff2');
+.font('Sarasa Mono J', 700, normal, 'sarasa-gothic/sarasa-mono-j-bold.woff2');
+.font('Sarasa Mono J', 400, italic, 'sarasa-gothic/sarasa-mono-j-italic.woff2');
+.font('Sarasa Mono J', 700, italic, 'sarasa-gothic/sarasa-mono-j-bolditalic.woff2');
+.font('Sarasa Mono SC', 400, normal, 'sarasa-gothic/sarasa-mono-sc-regular.woff2');
+.font('Sarasa Mono SC', 700, normal, 'sarasa-gothic/sarasa-mono-sc-bold.woff2');
+.font('Sarasa Mono SC', 400, italic, 'sarasa-gothic/sarasa-mono-sc-italic.woff2');
+.font('Sarasa Mono SC', 700, italic, 'sarasa-gothic/sarasa-mono-sc-bolditalic.woff2');
+.font('Sarasa Mono TC', 400, normal, 'sarasa-gothic/sarasa-mono-tc-regular.woff2');
+.font('Sarasa Mono TC', 700, normal, 'sarasa-gothic/sarasa-mono-tc-bold.woff2');
+.font('Sarasa Mono TC', 400, italic, 'sarasa-gothic/sarasa-mono-tc-italic.woff2');
+.font('Sarasa Mono TC', 700, italic, 'sarasa-gothic/sarasa-mono-tc-bolditalic.woff2');
