--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -22,10 +22,18 @@
 .font('Ricty Diminished', 700, normal, 'ricty-diminished/RictyDiminished-Bold.woff2');
 .font('Ricty Diminished', 400, italic, 'ricty-diminished/RictyDiminished-Oblique.woff2');
 .font('Ricty Diminished', 700, italic, 'ricty-diminished/RictyDiminished-BoldOblique.woff2');
+.font('Sarasa Mono HC', 400, normal, 'sarasa-gothic/sarasa-mono-hc-regular.woff2');
+.font('Sarasa Mono HC', 700, normal, 'sarasa-gothic/sarasa-mono-hc-bold.woff2');
+.font('Sarasa Mono HC', 400, italic, 'sarasa-gothic/sarasa-mono-hc-italic.woff2');
+.font('Sarasa Mono HC', 700, italic, 'sarasa-gothic/sarasa-mono-hc-bolditalic.woff2');
 .font('Sarasa Mono J', 400, normal, 'sarasa-gothic/sarasa-mono-j-regular.woff2');
 .font('Sarasa Mono J', 700, normal, 'sarasa-gothic/sarasa-mono-j-bold.woff2');
 .font('Sarasa Mono J', 400, italic, 'sarasa-gothic/sarasa-mono-j-italic.woff2');
 .font('Sarasa Mono J', 700, italic, 'sarasa-gothic/sarasa-mono-j-bolditalic.woff2');
+.font('Sarasa Mono K', 400, normal, 'sarasa-gothic/sarasa-mono-k-regular.woff2');
+.font('Sarasa Mono K', 700, normal, 'sarasa-gothic/sarasa-mono-k-bold.woff2');
+.font('Sarasa Mono K', 400, italic, 'sarasa-gothic/sarasa-mono-k-italic.woff2');
+.font('Sarasa Mono K', 700, italic, 'sarasa-gothic/sarasa-mono-k-bolditalic.woff2');
 .font('Sarasa Mono SC', 400, normal, 'sarasa-gothic/sarasa-mono-sc-regular.woff2');
 .font('Sarasa Mono SC', 700, normal, 'sarasa-gothic/sarasa-mono-sc-bold.woff2');
 .font('Sarasa Mono SC', 400, italic, 'sarasa-gothic/sarasa-mono-sc-italic.woff2');
